# sdl2-gamepad-mapper

./: .gitignore  CMakeLists.txt  DisplayMappedJoystickItem.qml  MappingGCItem.qml  MappingGCScripter.js  README.md  SDL2Delv.pro  SDL2Delv_en_US.ts  applogger.cpp  applogger.h  deploy_linux.sh  displaymappedjoystickbackend.cpp  displaymappedjoystickbackend.h  joystickcontainer.cpp  joystickcontainer.h  joystickcontainermodel.cpp  joysticksdl.cpp  joysticksdl.h  main.cpp  main.qml  mainviewbackend.cpp  mainviewbackend.h  mappinggcviewbackend.cpp  mappinggcviewbackend.h  qml.qrc  registerqmltypes.cpp  registerqmltypes.h  resources.qrc  sample_deploy.txt  sdl2-gamepad-mapper.desktop  sdl2-gamepad-mapper.pro  sdl2-gamepad-mapper_en_US.ts  sdl2mapperbackend.cpp  sdl2mapperbackend.h  sdlinputreader.cpp  sdlinputreader.h
docker/: Dockerfile  buildscript.sh
sdl2mappercomponents/: DisplayMappedJoystickItem.qml  MappingGCItem.qml  applogger.h  apploggersingleton.cpp  apploggersingleton.h  displaymappedjoystickbackend.cpp  displaymappedjoystickbackend.h  joystickcontainer.h  joystickcontainermodel.h  joysticksdl.cpp  joysticksdl.h  mainviewbackend.cpp  mainviewbackend.h  mappinggcviewbackend.cpp  mappinggcviewbackend.h  sdl2mapperbackend.h  sdl2mappercomponents.qrc
